Fix scrolling on safari

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -637,6 +637,7 @@ textarea {
 }
 
 .scroll-offset {
+  display: block;
   position: relative;
   top: -5em;
 }
